[gd_scene load_steps=7 format=3 uid="uid://cxpm0yni6xl5m"]

[ext_resource type="Script" path="res://Scripts/big_boss.gd" id="1_mg8bs"]
[ext_resource type="Texture2D" uid="uid://b3k2x6m28epvj" path="res://Assets/thefirstbossoffirstbosses.png" id="2_13rfu"]
[ext_resource type="PackedScene" uid="uid://c0i538cetsg2x" path="res://Scenes/UI/healthbar.tscn" id="3_sylvn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0mkr7"]
size = Vector2(160, 127.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y4r0l"]
size = Vector2(2205, 1620)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hgfxi"]
size = Vector2(159, 126)

[node name="BigBoss" type="CharacterBody2D"]
position = Vector2(-1, 2)
script = ExtResource("1_mg8bs")

[node name="Thefirstbossoffirstbosses" type="Sprite2D" parent="."]
position = Vector2(0.499939, 1.87494)
scale = Vector2(0.359728, 0.354225)
texture = ExtResource("2_13rfu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.499878, 1.12494)
shape = SubResource("RectangleShape2D_0mkr7")

[node name="Detection_area" type="Area2D" parent="."]
position = Vector2(-1, 3)
collision_layer = 8
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection_area"]
position = Vector2(-0.919556, -3.56006)
shape = SubResource("RectangleShape2D_y4r0l")

[node name="Hurt_box" type="Area2D" parent="."]
position = Vector2(2, 0)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurt_box"]
position = Vector2(-2, 1)
shape = SubResource("RectangleShape2D_hgfxi")
debug_color = Color(0.965911, 0.148667, 0.286393, 0.42)

[node name="Healthbar" parent="." instance=ExtResource("3_sylvn")]
offset_left = -190.0
offset_top = -124.0
offset_right = 190.0
offset_bottom = -105.0
metadata/_edit_use_anchors_ = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-0.500122, -0.125061)

[connection signal="area_entered" from="Detection_area" to="." method="_on_detection_area_area_entered"]
[connection signal="body_entered" from="Detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="Detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="area_entered" from="Hurt_box" to="." method="_on_hurt_box_area_entered"]
